; ModuleID = '/home/carl/AnghaBench/curl/lib/vauth/extr_digest.c_Curl_auth_create_digest_http_message.c'
source_filename = "/home/carl/AnghaBench/curl/lib/vauth/extr_digest.c_Curl_auth_create_digest_http_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Curl_easy = type { i32 }
%struct.digestdata = type { i32 }

@auth_digest_md5_to_ascii = common dso_local global i32 0, align 4
@Curl_md5it = common dso_local global i32 0, align 4
@auth_digest_sha256_to_ascii = common dso_local global i32 0, align 4
@Curl_sha256it = common dso_local global i32 0, align 4
@CURLE_UNSUPPORTED_PROTOCOL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Curl_auth_create_digest_http_message(%struct.Curl_easy* %0, i8* %1, i8* %2, i8* %3, i8* %4, %struct.digestdata* %5, i8** %6, i64* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca %struct.Curl_easy*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  %15 = alloca %struct.digestdata*, align 8
  %16 = alloca i8**, align 8
  %17 = alloca i64*, align 8
  store %struct.Curl_easy* %0, %struct.Curl_easy** %10, align 8
  store i8* %1, i8** %11, align 8
  store i8* %2, i8** %12, align 8
  store i8* %3, i8** %13, align 8
  store i8* %4, i8** %14, align 8
  store %struct.digestdata* %5, %struct.digestdata** %15, align 8
  store i8** %6, i8*** %16, align 8
  store i64* %7, i64** %17, align 8
  %18 = load %struct.digestdata*, %struct.digestdata** %15, align 8
  %19 = getelementptr inbounds %struct.digestdata, %struct.digestdata* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  switch i32 %20, label %45 [
    i32 133, label %21
    i32 132, label %21
    i32 131, label %33
    i32 130, label %33
    i32 129, label %33
    i32 128, label %33
  ]

21:                                               ; preds = %8, %8
  %22 = load %struct.Curl_easy*, %struct.Curl_easy** %10, align 8
  %23 = load i8*, i8** %11, align 8
  %24 = load i8*, i8** %12, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = load i8*, i8** %14, align 8
  %27 = load %struct.digestdata*, %struct.digestdata** %15, align 8
  %28 = load i8**, i8*** %16, align 8
  %29 = load i64*, i64** %17, align 8
  %30 = load i32, i32* @auth_digest_md5_to_ascii, align 4
  %31 = load i32, i32* @Curl_md5it, align 4
  %32 = call i32 @_Curl_auth_create_digest_http_message(%struct.Curl_easy* %22, i8* %23, i8* %24, i8* %25, i8* %26, %struct.digestdata* %27, i8** %28, i64* %29, i32 %30, i32 %31)
  store i32 %32, i32* %9, align 4
  br label %47

33:                                               ; preds = %8, %8, %8, %8
  %34 = load %struct.Curl_easy*, %struct.Curl_easy** %10, align 8
  %35 = load i8*, i8** %11, align 8
  %36 = load i8*, i8** %12, align 8
  %37 = load i8*, i8** %13, align 8
  %38 = load i8*, i8** %14, align 8
  %39 = load %struct.digestdata*, %struct.digestdata** %15, align 8
  %40 = load i8**, i8*** %16, align 8
  %41 = load i64*, i64** %17, align 8
  %42 = load i32, i32* @auth_digest_sha256_to_ascii, align 4
  %43 = load i32, i32* @Curl_sha256it, align 4
  %44 = call i32 @_Curl_auth_create_digest_http_message(%struct.Curl_easy* %34, i8* %35, i8* %36, i8* %37, i8* %38, %struct.digestdata* %39, i8** %40, i64* %41, i32 %42, i32 %43)
  store i32 %44, i32* %9, align 4
  br label %47

45:                                               ; preds = %8
  %46 = load i32, i32* @CURLE_UNSUPPORTED_PROTOCOL, align 4
  store i32 %46, i32* %9, align 4
  br label %47

47:                                               ; preds = %45, %33, %21
  %48 = load i32, i32* %9, align 4
  ret i32 %48
}

declare dso_local i32 @_Curl_auth_create_digest_http_message(%struct.Curl_easy*, i8*, i8*, i8*, i8*, %struct.digestdata*, i8**, i64*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
